# glClockpp

./: CMakeLists.txt  Camera.hpp  Mesh.hpp  Model.hpp  ModelLoading.cpp  README.md  Shader.cpp  Shader.hpp  main.cpp  main.hpp  model_shader.fs
glad/include/glad/: glad.h
glad/src/: glad.c
res/: 3DClock.mtl  Minutes_hand.mtl  glass.mtl  model_shader.fs
